--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -65,4 +65,16 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
+    <Button
+        android:id="@+id/testVMPath"
+        android:layout_width="350dp"
+        android:layout_height="103dp"
+        android:layout_marginStart="496dp"
+        android:layout_marginTop="68dp"
+        android:text="使用虚拟路径"
+        android:textAllCaps="false"
+        android:textSize="34sp"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
 </androidx.constraintlayout.widget.ConstraintLayout>
